# llm_tools

./: .gitignore  Makefile  README.md  download_today_arxiv_summary.py  pdf_to_summary.py  pdf_updown.py  pyproject.toml  sync_google_drive.py
llm_clis/chat_store/: cli.py  server.py
llm_clis/text_to_voice/: main.py
llm_clis/text_to_voice/prompts/templates/: arxiv_keywords_to_study_hint.j2  arxiv_summary_to_keywords_v1.j2  arxiv_summary_v1.j2  arxiv_summary_v2.j2  arxiv_summary_v2_output.j2
llm_tools/: voice_app.py
llm_tools/utils/: click_utils.py
openai_utils/: function_calling.py
scripts/: launch_voicevox.sh
utils/: arxiv_categories.yml  arxiv_utils.py  cache_utils.py  gcp_utils.py  gpt_4o_utils.py  json_utils.py  log_utils.py  pdf_extract.py  prompt_utils.py  time_utils.py  voice_utils.py
voice_browser/: item_models.py  main.py  recommend_models.py  recommend_models_test.py  setup.py
voice_browser/web_ui/: index.html
webui/llm_app_ui/: package-lock.json  package.json
webui/llm_app_ui/src/: App.tsx  Audio.tsx  Client.tsx  Markdown.tsx  Theme.tsx  UrlInput.tsx  main.tsx
