[tool.poetry]
name = "llm-tools"
version = "0.1.0"
description = ""
authors = ["n-kats <n-kats19890214@hotmail.co.jp>"]
readme = "README.md"
packages = [{include = "llm_clis"}, {include = "llm_tools"}, {include = "voice_browser"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
openai = ">=1.6.1"
click = "^8.1.3"
websockets = "^11.0.3"
sqlalchemy = "^2.0.16"
sqlalchemy-serializer = "^1.4.1"
fastapi = "^0.109.0"
pydantic = "^2.0.3"
uvicorn = "^0.27.0"
arxiv = "^2.1.0"
yq = "^3.2.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
google-api-python-client = "^2.103.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.1.0"
oauth2client = "^4.1.3"
pydub = "^0.25.1"
tenacity = "^8.2.3"
jinja2 = "^3.1.2"
beautifulsoup4 = "^4.12.2"
semanticscholar = "^0.7.0"
gradio = "^4.18.0"
pdf2image = "^1.17.0"
boto3 = "^1.34.54"
opencv-python = "^4.9.0.80"
polars = "^0.20.14"
pypdf = "^4.1.0"
annofabcli = "^1.82.1"
dataclasses-json = "^0.6.4"
llama-index = "^0.10.30"
chromadb = "^0.4.24"
llama-index-vector-stores-chroma = "^0.1.6"
ollama = "^0.1.8"
llama-index-llms-ollama = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
black = "^24.0.0"
isort = "^5.12.0"
pdbpp = "^0.10.3"
ruff = ">=0.2"
aws-cdk-lib = "^2.139.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chat-store-watch = "llm_clis.chat_store.cli:watch"
chat-store = "llm_clis.chat_store.cli:send"
text-to-voice = "llm_clis.text_to_voice.main:main"

[[tool.mypy.overrides]]
module=[
  "yaml", "arxiv", "dotenv",
  "bs4", "requests",
  "click", "fastapi.*", "websockets.*",
  "sqlalchemy.*","sqlalchemy_serializer",
  "pydub",
  "google.*", "googleapiclient.*"
]
ignore_missing_imports = true
