[tool.poetry]
name = "llm-tools"
version = "0.1.0"
description = ""
authors = ["n-kats <n-kats19890214@hotmail.co.jp>"]
readme = "README.md"
package-mode = false

# packages = [{include = "llm_clis"}, {include = "llm_tools"}, {include = "voice_browser"}]
[tool.poetry.dependencies]
python = ">=3.11,<4.0"
openai = ">=1.6.1"
click = "^8.1.3"
arxiv = "^2.1.0"
yq = "^3.2.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
google-api-python-client = "^2.103.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.1.0"
oauth2client = "^4.1.3"
pydub = "^0.25.1"
jinja2 = "^3.1.2"
beautifulsoup4 = "^4.12.2"
pdf2image = "^1.17.0"
boto3 = "^1.34.54"
opencv-python = "^4.9.0.80"
annofabcli = "^1.82.1"
dataclasses-json = "^0.6.4"
pdf-layout-client = {git = "https://github.com/n-kats/pdf-layout-client.git", branch = "main"}
typed-storage = {git = "https://github.com/n-kats/typed-storage.git", branch = "main"}
httpx = "^0.27.0"
scipy = "^1.14.1"
loguru = "^0.7.2"
gradio = ">=5.0.0"
polars = "^1.9.0"
ollama = "^0.3.3"
llama-index = "^0.11.17"
llama-index-llms-ollama = "^0.3.4"
pydantic = "^2.9.2"
semanticscholar = "^0.8.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
isort = "^5.12.0"
pdbpp = "^0.10.3"
ruff = ">=0.2"
aws-cdk-lib = "^2.139.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chat-store-watch = "llm_clis.chat_store.cli:watch"
chat-store = "llm_clis.chat_store.cli:send"
text-to-voice = "llm_clis.text_to_voice.main:main"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W"  # warning
]
ignore = []
fixable = ["ALL"]
exclude = [
    ".ruff_cache"
]

[[tool.mypy.overrides]]
module=[
  "yaml", "arxiv", "dotenv",
  "bs4", "requests",
  "click", "fastapi.*", "websockets.*",
  "sqlalchemy.*","sqlalchemy_serializer",
  "pydub",
  "google.*", "googleapiclient.*"
]
ignore_missing_imports = true
